--- a/dubbo-admin/pom.xml
+++ b/dubbo-admin/pom.xml
@@ -36,6 +36,8 @@
 			<groupId>com.alibaba</groupId>
 			<artifactId>dubbo</artifactId>
 			<version>${project.parent.version}</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/dubbo-2.8.4.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>com.alibaba.citrus</groupId>
