--- a/dubbo-admin/src/main/webapp/WEB-INF/dubbo.properties
+++ b/dubbo-admin/src/main/webapp/WEB-INF/dubbo.properties
@@ -1,3 +1,4 @@
-dubbo.registry.address=zookeeper://127.0.0.1:2181
+#dubbo.registry.address=zookeeper://127.0.0.1:2181
+dubbo.registry.address=zookeeper://172.16.0.2:2181
 dubbo.admin.root.password=root
 dubbo.admin.guest.password=guest
